# ai-accelerators-course-2025

tasks/02-softmax-cuda/Kozhevatov/: CMakeLists.txt
tasks/03-matmul-cuda/Kozhevatov/: CMakeLists.txt
tasks/04-softmax-ascend/Kozhevatov/: CMakeLists.txt  main.cpp  run-container.sh  run.sh  softmax_custom.cpp  version with debug.rar
tasks/04-softmax-ascend/Kozhevatov/scripts/: gen_data.py  verify_result.py
tasks/05-mixed-ascend/Kozhevatov/: CMakeLists.txt  config.h  main.cpp  matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_tiling.cpp  run.sh  softmax_custom.cpp
tasks/05-mixed-ascend/Kozhevatov/scripts/: gen_data.py
